--- a/src/app/components/heroes/heroes.component.html
+++ b/src/app/components/heroes/heroes.component.html
@@ -1,16 +1,18 @@
 <h1>Héroes <small>Marvel y DC</small></h1>
 <hr>
 
-<div class="card-columns">
-    <div class="card">
-        <img class="card-img-top" src="assets/img/aquaman.png" alt="Card image cap">
+<div class="card-columns ">
+    <!-- la card es la que se duplica en ella se coloca el ngfor  -->
+    <!-- se usan llaves cuadradas para que angular se encarge -->
+    <div class="card animated fadeIn fast" *ngFor="let heroe of heroes; let i = index">
+        <img class="card-img-top" [src]="heroe.img" [alt]="heroe.nombre">
         <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            <h5 class="card-title">{{ heroe.nombre }}</h5>
+            <p class="card-text">{{ heroe.bio }}</p>
+            <p class="card-text"><small class="text-muted ">{{ heroe.aparicion }}</small></p>
 
-            <button type="button" class="btn btn-outline-primary btn-block"> Ver mas...</button>
-
+            <button (click)=verHeroe(i) type="button" class="btn btn-outline-primary btn-block"> Ver mas...</button>
+            <!-- <a [routerLink]="['/heroe',i]" routerLinkActive="router-link-active" class="btn btn-outline-primary"> ver mas...</a> -->
         </div>
     </div>
 </div>
