--- a/src/app/components/heroe/heroe.component.html
+++ b/src/app/components/heroe/heroe.component.html
@@ -1,1 +1,19 @@
-<p>heroe works!</p>
+<h1 class="animated fadeIn fast">{{heroe.nombre | uppercase}}<small> ({{heroe.aparicion | date:'y'}})</small></h1>
+
+<div class="row animated fadeIn">
+    <div class="col-md-4 mx-auto">
+        <img [src]="heroe.img" [alt]="heroe.nombre" class="img-fluid">
+        <br><br>
+        <a [routerLink]="['/heroes']" class="btn btn-outline-danger btn-block">Regresar...</a>
+    </div>
+
+    <div class="col-md-8">
+        <h3>{{heroe.nombre}}</h3>
+        <hr>
+        <p>{{heroe.bio}}</p>
+        <div>
+            <img *ngIf="heroe.casa=='DC'" class="casa-logo" src="../assets/img/dc-logo.png" alt="heroe.casa">
+            <img *ngIf="heroe.casa=='Marvel'" class="casa-logo" src="../assets/img/marvel-logo.png" alt="heroe.casa">
+        </div>
+    </div>
+</div>
