--- a/src/app/components/shared/footer/footer.component.html
+++ b/src/app/components/shared/footer/footer.component.html
@@ -4,7 +4,10 @@
     <!-- Copyright -->
     <div class="footer-copyright text-center py-3 text-light">
         © {{year}} Copyright:
-        <a target="blank" href="mailTo:robertocorraleszelaya@gmail.com">Roberto CZ</a>
+        <a target="blank" href="mailTo:robertoczdev@gmail.com">Roberto CZ <i class="fas fa-code"></i></a>
+
+
+
     </div>
     <!-- Copyright -->
 
