--- a/src/app/components/heroe-tarjeta/heroe-tarjeta.component.html
+++ b/src/app/components/heroe-tarjeta/heroe-tarjeta.component.html
@@ -1,1 +1,11 @@
-<p>heroe-tarjeta works!</p>
+<div class="card animated fadeIn fast">
+    <img class="card-img-top" [src]="heroe.img" [alt]="heroe.nombre">
+    <div class="card-body">
+        <h5 class="card-title">{{ heroe.nombre }}</h5>
+        <p class="card-text">{{ heroe.bio }}</p>
+        <p class="card-text"><small class="text-muted ">{{ heroe.aparicion }}</small></p>
+
+        <button (click)=verHeroe() type="button" class="btn btn-outline-primary btn-block"> Ver mas...</button>
+        <!-- <a [routerLink]="['/heroe',i]" routerLinkActive="router-link-active" class="btn btn-outline-primary"> ver mas...</a> -->
+    </div>
+</div>
