--- a/src/app/components/heroes/heroes.component.html
+++ b/src/app/components/heroes/heroes.component.html
@@ -4,15 +4,14 @@
 <div class="card-columns ">
     <!-- la card es la que se duplica en ella se coloca el ngfor  -->
     <!-- se usan llaves cuadradas para que angular se encarge -->
-    <div class="card animated fadeIn fast" *ngFor="let heroe of heroes; let i = index">
-        <img class="card-img-top" [src]="heroe.img" [alt]="heroe.nombre">
-        <div class="card-body">
-            <h5 class="card-title">{{ heroe.nombre }}</h5>
-            <p class="card-text">{{ heroe.bio }}</p>
-            <p class="card-text"><small class="text-muted ">{{ heroe.aparicion }}</small></p>
 
-            <button (click)=verHeroe(i) type="button" class="btn btn-outline-primary btn-block"> Ver mas...</button>
-            <!-- <a [routerLink]="['/heroe',i]" routerLinkActive="router-link-active" class="btn btn-outline-primary"> ver mas...</a> -->
-        </div>
-    </div>
+    <!-- *ngFor="let heroe of heroes; let i = index" -->
+    <!-- input  -->
+    <!-- al habilitar el decorador input se pueden mandar argumentos del padre al hijo -->
+    <!-- se usa el mismo nombre definido en el hijo entre [ ] y se asigna el valor  -->
+    <!-- output -->
+    <!-- se escucha el evento del hijo, se llama ala funcion del padre
+    y se pasa el parametro $event que es lo que se manda de el hijo -->
+    <app-heroe-tarjeta (HeroeSeleccionado)="verHeroe( $event )" [heroe]=heroe [index]=i *ngFor="let heroe of heroes; let i = index"></app-heroe-tarjeta>
+
 </div>
