--- a/src/app/components/resultado-busqueda/resultado-busqueda.component.html
+++ b/src/app/components/resultado-busqueda/resultado-busqueda.component.html
@@ -10,16 +10,5 @@
     </div>
 </div>
 <div *ngIf="heroes.length >0" class="card-columns ">
-    <!-- la card es la que se duplica en ella se coloca el ngfor  -->
-    <!-- se usan llaves cuadradas para que angular se encarge -->
-    <div class="card animated fadeIn fast" *ngFor="let heroe of heroes; let i = index">
-        <img class="card-img-top" [src]="heroe.img" [alt]="heroe.nombre">
-        <div class="card-body">
-            <h5 class="card-title">{{ heroe.nombre }}</h5>
-            <p class="card-text">{{ heroe.bio }}</p>
-            <p class="card-text"><small class="text-muted ">{{ heroe.aparicion }}</small></p>
-
-            <!-- <button (click)=verHeroe(i) type="button" class="btn btn-outline-primary btn-block"> Ver mas...</button> -->
-        </div>
-    </div>
+    <app-heroe-tarjeta [heroe]=heroe [index]=heroe.idx *ngFor="let heroe of heroes; let i = index"></app-heroe-tarjeta>
 </div>
